[package]
name = "bench"
version = "0.1.0"
authors = ["Uwe Arzt <mail@uwe-arzt.de>"]
edition = "2018"

[dependencies]
criterion = "0.3.3"
imagezero-sys = { path = "../imagezero-sys" }
imagezero = { path = "../imagezero-rs" }

clap = "2.33.3"
image = "0.23.12"

[[bench]]
name = "imagezero"
harness = false