[package]
name = "bench"
version = "0.1.0"
authors = ["Uwe Arzt <mail@uwe-arzt.de>"]
edition = "2021"

[dependencies]
criterion = "0.3.4"
imagezero-sys = { path = "../imagezero-sys" }
imagezero = { path = "../imagezero-rs" }

clap = "2.33.3"
image = "0.23.13"

libc = "0.2.86"

[[bench]]
name = "imagezero"
harness = false